adjust java settings